--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -278,7 +278,7 @@ bookmarksnumbered=true
 %% as the abstract page.
 %%
 \thesisabstract{
-We review asymptotic properties of the Hill estimator, that is one of the most popular tail estimators for heavy tailed functions. Focus is on the consistency of the estimator. We provide result for asymptotic normality but detailed analysis is not in the scope of this paper. Additionally we carefully review  properties of the regularly varying functions since they are closely related to the theory of heavy tailed functions. Lastly, asymptotic behavior of the Hill estimator is examined with Monte Carlo simulations.
+We review the proof of the Hill estimator's consistency. Properties of the regularly varying functions play a crucial role in the theory. Consistency is also studied using simulations. Other properties of the Hill estimator such as asymptotic normality are also reviewed briefly.
 }
 
 %% Copyright text. Copyright of a work is with the creator/author of the work
